2007-02-20  Michael Stucki  <michael@typo3.org>

	* Fixed bug in EM: Insecure extensions were still displayed (patch by Karsten Dambekalns)
	* Fixed a typo in class.em_xmlhandler.php
	* Fixed a typo in typo3/sysext/install/mod/class.tx_install.php
	* Changed another bug in the EM: Last update of extensions.xml.gz was not displayed
	* Fixed bug #4951: SQL error when editing BE User

2007-02-20  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #4202: be_groups - fields restricted by a low maxitems value

2007-02-20  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #4993: IE 5.5 and Konqueror compatibility for AJAX navtree

2007-02-20  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #5032: [LocalLang: 0?]DEF is sometimes displayed for content elements

2007-02-19  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug: AJAX navtree erroneously showed whole tree inside of the expanded branch on errors such as pages deleted in the meantime (thanks to Benjamin Mack)
	* Fixed bug #4993: AJAX navtree does not expand in Konqueror (fixed by Benjamin Mack)

2007-02-16  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #4207: User>Workspaces shows users pages they have no access to

2007-02-16  Karsten Dambekalns  <karsten@typo3.org>

	* Fixed bug #4822: EM shows remote extensions as on this server only

2007-02-16  Michael Stucki  <michael@typo3.org>

	* Fixed bug #4973: Check if array is empty before looping over it (thanks to Thomas Oppelt)
	* Fixed bug #2677: Highlighting of current page in workspace (fixed by Martin Kutschker and Benjamin Mack)

2007-02-16  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug 4962: .htaccess in sysext fails in some Apache configurations

2007-02-15  Michael Stucki  <michael@typo3.org>

	* Reverted fix for bug #4689 (closes #4987): Fix seems to cause problems, reinvestiation is needed

2007-02-15  Martin Kutschker  <martin.t.kutschker@blackbox.net>
