@@ -391,7 +391,7 @@ $TCA['tt_content'] = Array (
 				'type' => 'group',
 				'internal_type' => 'file',
 				'allowed' => $GLOBALS['TYPO3_CONF_VARS']['GFX']['imagefile_ext'],
-				'max_size' => '1000',
+				'max_size' => $GLOBALS['TYPO3_CONF_VARS']['BE']['maxFileSize'],
 				'uploadfolder' => 'uploads/pics',
 				'show_thumbs' => '1',
 				'size' => '3',
@@ -790,7 +790,7 @@ $TCA['tt_content'] = Array (
 				'internal_type' => 'file',
 				'allowed' => '',	// Must be empty for disallowed to work.
 				'disallowed' => 'php,php3',
-				'max_size' => '10000',
+				'max_size' => $GLOBALS['TYPO3_CONF_VARS']['BE']['maxFileSize'],
 				'uploadfolder' => 'uploads/media',
 				'show_thumbs' => '1',
 				'size' => '3',
@@ -804,7 +804,7 @@ $TCA['tt_content'] = Array (
 				'type' => 'group',
 				'internal_type' => 'file',
 				'allowed' => 'txt,html,htm,class,swf,swa,dcr,wav,avi,au,mov,asf,mpg,wmv,mp3',
-				'max_size' => '10000',
+				'max_size' => $GLOBALS['TYPO3_CONF_VARS']['BE']['maxFileSize'],
 				'uploadfolder' => 'uploads/media',
 				'size' => '2',
 				'maxitems' => '1',
