@@ -5,6 +5,7 @@
 	* Fixed a typo in typo3/sysext/install/mod/class.tx_install.php
 	* Changed another bug in the EM: Last update of extensions.xml.gz was not displayed
 	* Fixed bug #4951: SQL error when editing BE User
+	* Fixed bug #3412: Changed default size limits for various BE upload fields to 10M (this default can be defined through $TYPO3_CONF_VARS[BE][maxFileSize] or individually per field through $TCA)
 
 2007-02-20  Oliver Hader  <oh@inpublica.de>
 
